Implement customer creation
