# internal/handlers/rest.go
@@ -2,10 +2,11 @@ package handlers
 
 import (
 	"customer-service/internal/core/ports"
+	"customer-service/pkg/authorization"
 	"customer-service/pkg/dto"
-	"github.com/google/uuid"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"github.com/swaggo/gin-swagger/swaggerFiles"
+	"net/http"
 
 	"customer-service/docs"
 	_ "customer-service/docs"
@@ -29,7 +30,6 @@ func (handler *HTTPHandler) SetupEndpoints() {
 	api.GET("/customers", handler.GetAll)
 	api.GET("/customers/:id", handler.Get)
 	api.POST("/customers", handler.Create)
-	api.PUT("/customers/:id", handler.UpdateDetails)
 	api.PUT("/customers/:id/service-area", handler.UpdateServiceArea)
 }
 
@@ -49,14 +49,19 @@ func (handler *HTTPHandler) SetupSwagger() {
 // @Success      200  {object}  []domain.Customer
 // @Router       /api/customers [get]
 func (handler *HTTPHandler) GetAll(c *gin.Context) {
-	customers, err := handler.customerService.GetAll()
+	if authorization.NewRest(c).AuthorizeAdmin() {
 
-	if err != nil {
-		c.AbortWithStatus(404)
-		return
+		customers, err := handler.customerService.GetAll()
+
+		if err != nil {
+			c.AbortWithStatus(http.StatusNotFound)
+			return
+		}
+
+		c.JSON(http.StatusOK, customers)
 	}
 
-	c.JSON(200, customers)
+	c.AbortWithStatus(http.StatusUnauthorized)
 }
 
 // Get godoc
@@ -68,21 +73,20 @@ func (handler *HTTPHandler) GetAll(c *gin.Context) {
 // @Success      200  {object}  domain.Customer
 // @Router       /api/customers/{id} [get]
 func (handler *HTTPHandler) Get(c *gin.Context) {
-	uid, err := uuid.Parse(c.Param("id"))
+	auth := authorization.NewRest(c)
 
-	if err != nil {
-		c.AbortWithStatus(400)
-		return
+	if auth.AuthorizeAdmin() || auth.AuthorizeMatchingId(c.Param("id")) {
+		customer, err := handler.customerService.Get(c.Param("id"))
+
+		if err != nil {
+			c.AbortWithStatus(http.StatusNotFound)
+			return
+		}
+
+		c.JSON(http.StatusOK, customer)
 	}
 
-	customer, err := handler.customerService.Get(uid)
-
-	if err != nil {
-		c.AbortWithStatus(404)
-		return
-	}
-
-	c.JSON(200, customer)
+	c.AbortWithStatus(http.StatusUnauthorized)
 }
 
 // Create godoc
@@ -99,52 +103,24 @@ func (handler *HTTPHandler) Create(c *gin.Context) {
 	err := c.BindJSON(&body)
 
 	if err != nil {
-		c.AbortWithStatus(500)
+		c.AbortWithStatus(http.StatusBadRequest)
 	}
 
-	customer, err := handler.customerService.Create(body.Name, body.LastName, body.Email)
+	auth := authorization.NewRest(c)
 
-	if err != nil {
-		c.AbortWithStatusJSON(500, gin.H{"message": err.Error()})
-		return
+	if auth.AuthorizeAdmin() || auth.AuthorizeMatchingId(body.ID) {
+
+		customer, err := handler.customerService.Create(body.ID, body.ServiceArea)
+
+		if err != nil {
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
+			return
+		}
+
+		c.JSON(http.StatusOK, dto.BuildResponseCreateCustomer(customer))
 	}
 
-	c.JSON(200, dto.BuildResponseCreateCustomer(customer))
-}
-
-// UpdateDetails godoc
-// @Summary  update customer details
-// @Schemes
-// @Description  updates a customers name, last name and/or email
-// @Accept       json
-// @Param        customer  body  dto.BodyUpdateCustomer  true  "Update customer"
-// @Param        id  path  string  true  "Customer id"
-// @Produce      json
-// @Success      200  {object}  dto.ResponseUpdateCustomer
-// @Router       /api/customers/{id} [put]
-func (handler *HTTPHandler) UpdateDetails(c *gin.Context) {
-	body := dto.BodyUpdateCustomer{}
-	err := c.BindJSON(&body)
-
-	if err != nil {
-		c.AbortWithStatus(500)
-	}
-
-	uid, err := uuid.Parse(c.Param("id"))
-
-	if err != nil {
-		c.AbortWithStatus(400)
-		return
-	}
-
-	customer, err := handler.customerService.UpdateCustomerDetails(uid, body.Name, body.LastName, body.Email)
-
-	if err != nil {
-		c.AbortWithStatusJSON(500, gin.H{"message": err.Error()})
-		return
-	}
-
-	c.JSON(200, dto.BuildResponseUpdateCustomer(customer))
+	c.AbortWithStatus(http.StatusUnauthorized)
 }
 
 // UpdateServiceArea godoc
@@ -158,26 +134,26 @@ func (handler *HTTPHandler) UpdateDetails(c *gin.Context) {
 // @Success      200  {object}  dto.ResponseUpdateServiceArea
 // @Router       /api/customers/{id}/service-area [put]
 func (handler *HTTPHandler) UpdateServiceArea(c *gin.Context) {
-	body := dto.BodyUpdateServiceArea{}
-	err := c.BindJSON(&body)
+	auth := authorization.NewRest(c)
 
-	if err != nil {
-		c.AbortWithStatus(500)
+	if auth.AuthorizeAdmin() || auth.AuthorizeMatchingId(c.Param("id")) {
+
+		body := dto.BodyUpdateServiceArea{}
+		err := c.BindJSON(&body)
+
+		if err != nil {
+			c.AbortWithStatus(http.StatusBadRequest)
+		}
+
+		customer, err := handler.customerService.UpdateServiceArea(c.Param("id"), body.ServiceArea)
+
+		if err != nil {
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
+			return
+		}
+
+		c.JSON(http.StatusOK, dto.BuildResponseUpdateServiceArea(customer))
 	}
 
-	uid, err := uuid.Parse(c.Param("id"))
-
-	if err != nil {
-		c.AbortWithStatus(400)
-		return
-	}
-
-	customer, err := handler.customerService.UpdateServiceArea(uid, body.ServiceArea)
-
-	if err != nil {
-		c.AbortWithStatusJSON(500, gin.H{"message": err.Error()})
-		return
-	}
-
-	c.JSON(200, dto.BuildResponseUpdateServiceArea(customer))
+	c.AbortWithStatus(http.StatusUnauthorized)
 }
